# CGA

./: .gitmodules  CMakeLists.txt  imgui.ini
assets/: BaseScene.scene
assets/models/drakonik/source/: MaterialSeparated.mtl  Metalic.mtl  untitled.mtl
include/: FrustumCull.h  config.hpp  pch.hpp  perpDot.hpp
include/glad/: glad.h
shaders/: screen.frag  screen.vert
src/: glad.c  main.cpp
src/classes/: path.hpp
src/classes/App/: App.cpp  App.hpp
src/classes/Assets/: Color4b.hpp  MeshInstance.hpp  Vertex.hpp
src/classes/Assets/Light/: Light.hpp
src/classes/Assets/Mesh/: Mesh.cpp  Mesh.hpp
src/classes/Assets/Texture/: Texture.cpp  Texture.hpp
src/classes/Box/: Box.cpp  Box.hpp
src/classes/Camera/: Camera.cpp  Camera.hpp
src/classes/Engine/: Settings.hpp
src/classes/Engine/Buffers/: BufferBase.hpp
src/classes/Engine/Buffers/ColorBuffer/: ColorBuffer.cpp  ColorBuffer.hpp
src/classes/Engine/Buffers/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.hpp
src/classes/Engine/Camera/: Camera.cpp  Camera.hpp
src/classes/Engine/Renderer/: Renderer.cpp  Renderer.hpp
src/classes/Engine/Scene/: Scene.cpp  Scene.hpp
src/classes/Engine/Triangle/: Triangle.cpp  Triangle.hpp
src/classes/Loader/: Loader.cpp  Loader.hpp
src/classes/ObjParser/: ObjParser.cpp  ObjParser.hpp
src/classes/Object/: Object.cpp  Object.hpp
src/classes/PngLoader/: PngLoader.cpp  PngLoader.hpp
src/classes/Renderer/: Renderer.cpp  Renderer.hpp
src/classes/Shader/: Shader.cpp  Shader.hpp  ShaderType.cpp  ShaderType.hpp
src/classes/ShaderProg/: ShaderProg.cpp  ShaderProg.hpp
src/classes/VAO/: VBLayout.hpp
src/classes/Viewer/App/: App.cpp  App.hpp
src/classes/Viewer/Shader/: Shader.cpp  Shader.hpp  ShaderType.cpp  ShaderType.hpp
src/classes/Viewer/ShaderProg/: ShaderProg.cpp  ShaderProg.hpp
src/classes/Viewer/Window/: Window.cpp  Window.hpp
